[gd_scene load_steps=25 format=3 uid="uid://b68iki5mx8dwx"]

[ext_resource type="PackedScene" uid="uid://vh7pmputa7r3" path="res://scripts/actors/actor.tscn" id="1_mmq6v"]
[ext_resource type="Script" uid="uid://dsmld3locmgmk" path="res://scripts/actors/witch.gd" id="2_2mx4y"]
[ext_resource type="AudioStream" uid="uid://fhmlycj1doe4" path="res://audio/SFX/sfx_fly_1.mp3" id="3_7rhl7"]
[ext_resource type="AudioStream" uid="uid://btuighu5k1wf8" path="res://audio/SFX/sfx_spell-cast_1.mp3" id="3_s3olv"]
[ext_resource type="AudioStream" uid="uid://b7txedce137bm" path="res://audio/SFX/sfx_spell-cast_2.mp3" id="4_7rhl7"]
[ext_resource type="AudioStream" uid="uid://d34y2lvb3g2r6" path="res://audio/SFX/sfx_fly_2.mp3" id="4_uciwg"]
[ext_resource type="AudioStream" uid="uid://doemdx4ua3ucn" path="res://audio/SFX/sfx_fly_3.mp3" id="5_s5g81"]
[ext_resource type="AudioStream" uid="uid://cvh2aouuuiq45" path="res://audio/SFX/sfx_footsteps_1.mp3" id="6_roueu"]
[ext_resource type="AudioStream" uid="uid://m7n2avw2a1rw" path="res://audio/SFX/sfx_footsteps_2.mp3" id="7_hpcpn"]
[ext_resource type="AudioStream" uid="uid://c6jbkgwqn24gg" path="res://audio/SFX/sfx_footsteps_3.mp3" id="8_guv7i"]
[ext_resource type="AudioStream" uid="uid://bkcanmg1x0br6" path="res://audio/SFX/sfx_footsteps_4.mp3" id="9_iv15w"]
[ext_resource type="AudioStream" uid="uid://lqyyw13bqjtw" path="res://audio/SFX/sfx_footsteps_5.mp3" id="10_4e0qg"]
[ext_resource type="AudioStream" uid="uid://ckdd1mvbge3ib" path="res://audio/SFX/sfx_footsteps_6.mp3" id="11_yrq68"]
[ext_resource type="AudioStream" uid="uid://cwlwlnt6qpkok" path="res://audio/SFX/sfx_footsteps_7.mp3" id="12_mtjbc"]
[ext_resource type="AudioStream" uid="uid://b7dny5myj2fxo" path="res://audio/SFX/sfx_footsteps_8.mp3" id="13_rflht"]
[ext_resource type="SpriteFrames" uid="uid://do5lb0e61jvc" path="res://scripts/actors/skeleton_frames.tres" id="16_jhf12"]
[ext_resource type="Texture2D" uid="uid://ymbieisxli33" path="res://images/UI/Stamina1_Outline.PNG" id="80_hpcpn"]
[ext_resource type="Texture2D" uid="uid://cc5t6dv0jihhg" path="res://images/UI/Stamina1_Fill.PNG" id="81_guv7i"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s5g81"]
streams_count = 3
stream_0/stream = ExtResource("3_7rhl7")
stream_1/stream = ExtResource("4_uciwg")
stream_2/stream = ExtResource("5_s5g81")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pum8t"]
streams_count = 2
stream_0/stream = ExtResource("3_s3olv")
stream_1/stream = ExtResource("4_7rhl7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y6sh6"]
streams_count = 8
stream_0/stream = ExtResource("6_roueu")
stream_1/stream = ExtResource("7_hpcpn")
stream_2/stream = ExtResource("8_guv7i")
stream_3/stream = ExtResource("9_iv15w")
stream_4/stream = ExtResource("10_4e0qg")
stream_5/stream = ExtResource("11_yrq68")
stream_6/stream = ExtResource("12_mtjbc")
stream_7/stream = ExtResource("13_rflht")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mx4y"]
size = Vector2(109.649, 3.49072)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_885mi"]
height = 136.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ks07l"]

[node name="Witch" instance=ExtResource("1_mmq6v")]
script = ExtResource("2_2mx4y")
fly_jump_speed = -30.0
vertical_speed = 350.0
vertical_accel = 6
fly_collision_offset = 26
run_speed = 330.0
jump_speed = -600.0
defer_texture_load = "uid://frrtev7tx7r8"

[node name="FlySFX" type="AudioStreamPlayer" parent="." index="0"]
stream = SubResource("AudioStreamRandomizer_s5g81")
volume_db = 15.0

[node name="SpellcastSFX" type="AudioStreamPlayer" parent="." index="1"]
stream = SubResource("AudioStreamRandomizer_pum8t")
volume_db = 15.0

[node name="MoveSFX" type="AudioStreamPlayer" parent="." index="2"]
stream = SubResource("AudioStreamRandomizer_y6sh6")
volume_db = 15.0

[node name="FlyOffset" type="Marker2D" parent="." index="3"]
unique_name_in_owner = true
position = Vector2(0, -13)

[node name="PetOffset" type="Marker2D" parent="." index="4"]
unique_name_in_owner = true
position = Vector2(0, -28)

[node name="Graphics" parent="." index="5"]
position = Vector2(1, -69)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Graphics" index="0"]
use_parent_material = true
position = Vector2(-1.13687e-13, 66)
scale = Vector2(0.1, 0.1)
sprite_frames = ExtResource("16_jhf12")
animation = &"fall"
offset = Vector2(-140, -660)
flip_h = true

[node name="CliffDetector" parent="Graphics" index="1"]
position = Vector2(0, 66)
target_position = Vector2(10, 7)

[node name="Broom" type="Area2D" parent="Graphics" index="2"]
unique_name_in_owner = true
position = Vector2(-1, 19)
rotation = -0.0964071
collision_layer = 32

[node name="Dest" type="Marker2D" parent="Graphics/Broom" index="0"]
position = Vector2(43.2816, -0.837696)

[node name="BroomCollider" type="CollisionShape2D" parent="Graphics/Broom" index="1"]
position = Vector2(6.46982, 0.671738)
shape = SubResource("RectangleShape2D_2mx4y")

[node name="PlatformDetector" parent="." index="6"]
position = Vector2(0, -1)

[node name="FloorDetector" parent="." index="7"]
position = Vector2(0, -10)

[node name="CollisionShape2D" parent="." index="8"]
position = Vector2(0, -68)
shape = SubResource("CapsuleShape2D_885mi")

[node name="JumpSound" parent="." index="9"]
position = Vector2(0, -69)

[node name="AnimationPlayer" parent="." index="10"]
libraries = {
&"": SubResource("AnimationLibrary_ks07l")
}

[node name="DeathEffect" parent="." index="11"]
position = Vector2(0, -69)

[node name="SwitchEffect" parent="." index="12"]
position = Vector2(0, -69)

[node name="FlightTimer" type="Timer" parent="." index="14"]
unique_name_in_owner = true
one_shot = true

[node name="FlyTimer" type="Timer" parent="." index="15"]
wait_time = 0.8
one_shot = true

[node name="MaxWaitTimer" type="Timer" parent="." index="16"]
wait_time = 2.7

[node name="StaminaOutline" type="Sprite2D" parent="." index="18"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-32, -168)
scale = Vector2(0.5, 0.5)
texture = ExtResource("80_hpcpn")
centered = false

[node name="StaminaFill" type="Sprite2D" parent="StaminaOutline" index="0"]
unique_name_in_owner = true
show_behind_parent = true
texture_filter = 1
position = Vector2(3, 3)
texture = ExtResource("81_guv7i")
centered = false

[connection signal="timeout" from="FlightTimer" to="." method="_on_flight_timer_timeout"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_fly_timer_timeout"]
[connection signal="timeout" from="MaxWaitTimer" to="." method="_on_max_wait_timer_timeout"]
